--- a/html/cv.html
+++ b/html/cv.html
@@ -7,7 +7,7 @@
     <title>Curriculum Vitae</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Rowdies&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilocv.css">
+    <link rel="stylesheet" href="/Curso/cv/CV/css/estilocv.css">
 
 </head>
 <body>
@@ -51,7 +51,7 @@
             </ul>
         </section>
     </div> 
-<script src="/js/curriculum.js"></script>
+<script src="/Curso/cv/CV/js/curriculum.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/5f4e9d95ca.js" crossorigin="anonymous"></script>
 <script>
