--- a/html/cv.html
+++ b/html/cv.html
@@ -51,7 +51,7 @@
             </ul>
         </section>
     </div> 
-<script src="/curriculum.js"></script>
+<script src="../js/curriculum.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/5f4e9d95ca.js" crossorigin="anonymous"></script>
 <script>
